--- a/alphakitwp/style.sass
+++ b/alphakitwp/style.sass
@@ -4,6 +4,7 @@ div.container
   width: 100%
   margin: 0 -20px 0 -20px
   padding: 0 -20px 0 20px
+  font-size: 13px
 div.purespace
   margin: 0 0 0 20px
 img#loadspinner
@@ -55,7 +56,7 @@ div.pure-g
   padding: -5px 0 -5px 0
   border-radius: $outerCorner 0 0 0
 
-.entity-title p, .entity-refreshing p
+.entity-title p, .entity-refreshing p, .entity-middle p
   margin: $dellaLineMargin $dellaLineMargin $dellaLineMargin 2*$dellaLineMargin
 
 .entity-refreshing
@@ -65,6 +66,19 @@ div.pure-g
   border-radius: 0 $outerCorner 0 0
   img
     filter: brightness(3)
+
+.entity-middle
+  background: $green
+  border-radius: 0
+  color: white
+  input
+    width: 100%
+    min-width: 100%
+    border-radius: $innerCorner $innerCorner $innerCorner $innerCorner
+    margin: $dellaLineMargin $dellaLineMargin $dellaLineMargin 2*$dellaLineMargin
+  select
+    color: darkgrey
+
 .entity-bottom
   background: $green
   border-radius: 0 0 $outerCorner $outerCorner
